added Allure for reporting